--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
         with:
           path: docs/.vitepress/dist
 
-  # Deployment job
+  # Deployment job.
   deploy:
     environment:
       name: github-pages
